--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -22,3 +22,15 @@
 .text-left{
     text-align: left;
 }
+
+#authorize_button {
+    width: 100%;
+    margin-top: -10px;
+    margin-bottom: 20px;
+}
+
+#signout_button {
+    width: 100%;
+    margin-top: -10px;
+    margin-bottom: 20px;
+}
