Moving http to https
Signed-off-by: Justin Brûlotte <justin.brlotte797@gmail.com>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /*
  * Author: Carlos Alvarez
- * URL: http://Alvarez.is
+ * URL: https://Alvarez.is
  *
  * Project Name: NYC Design
  * Version: 1.0
@@ -13,7 +13,7 @@
    Base Styles, Bootstrap Modifications & Fonts Import
    ========================================================================== */
 
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 /*
  * A better looking default horizontal rule
